--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -1,9 +1,30 @@
 <html>
 <head>
+  <meta charset ="UTF-8">
   <title>Document</title>
+  
+  <input type="text" id="input"><br>
+  <textarea id="output"></textarea>
+  <button onclick="input()">입력받기</button>
+  <button onclick="output()">출력하기</button>
+
+
+  <!-- 아래부터 자바스크립트 -->
+  <script type="text/javascript">
+  var temp;
+
+  function input(){
+  var input = document.getElementById("input").value;
+  temp = input;
+  }
+
+  function output(){
+  document.getElementById("output").value = temp;
+  }
+  </script>
 </head>
 <body>
-<h1>POPUP !!</h1>
+<h1> do u wanna pay for that? </h1>
 <input type = "button" value="close" onclick="self.close();"/>
 </body>
 </html>
