--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -2,11 +2,13 @@
 <head>
   <meta charset ="UTF-8">
   <title>Document</title>
+
+  <h1> do u wanna pay for that? </h1>
+  <input type="text" id="input">
+  <button onclick="input()">입력받기</button><br><br>
   
-  <input type="text" id="input"><br>
   <textarea id="output"></textarea>
-  <button onclick="input()">입력받기</button>
-  <button onclick="output()">출력하기</button>
+  <button onclick="output()">출력하기</button><br><br>
 
 
   <!-- 아래부터 자바스크립트 -->
@@ -22,9 +24,10 @@
   document.getElementById("output").value = temp;
   }
   </script>
+
 </head>
 <body>
-<h1> do u wanna pay for that? </h1>
+
 <input type = "button" value="close" onclick="self.close();"/>
 </body>
 </html>
