--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="css/shop-homepage.css" rel="stylesheet">
   
   <script language = "javascript">
-    function showPopup(){window.open("aaa/popup1.html","a","width=400,height=300,left=100,top=50");}
+    function showPopup(){window.open("aaa/popup1.html","a","width=500,height=400,left=100,top=50");}
       
     
   </script>
@@ -103,7 +103,7 @@
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small><
               </div>
             </div>
           </div>
