--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                   <span onclick ="showPopup();"><a href="#">Adidas </a></span>
                 </h4>
                 <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">Best Hamburger that you have eaten ever!! Give it a try! </p>
               </div>
               <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small><
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small><br>
               </div>
             </div>
           </div>
@@ -116,10 +116,10 @@
                   <a href="#">Nike</a>
                 </h4>
                 <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">Best Sandwitch! You can enjoy it too!</p>
               </div>
               <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small><br>
               </div>
             </div>
           </div>
