--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                 <h4 class="card-title">
                   <span onclick ="showPopup();"><a href="#">Adidas </a></span>
                 </h4>
-                <h5>$24.99</h5>
+                <h5><span onclick ="showPopup();"><a href="#">$24.99 </a></span>
+                  </h5>
                 <p class="card-text">Best Hamburger that you have eaten ever!! Give it a try! </p>
               </div>
               <div class="card-footer">
