--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <a href="#"><img class="card-img-top" src="https://t1.daumcdn.net/cfile/tistory/2536954357884B6335" width = "300" height = "150" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <span onclick ="showPopup();"><a href="#">Adidas </a></span>
+                  Big Mac Burger
                 </h4>
                 <h5><span onclick ="showPopup();"><a href="#">$24.99 </a></span>
                   </h5>
