--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -18,7 +18,10 @@
 
   function input(){
   var input = document.getElementById("input").value;
-  temp = parseInt(input);
+  if( input == 12345 )
+  	temp = parseInt(1000);
+  else if
+    temp = parseInt(0);
   }
 
   function output(){
