--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -18,9 +18,10 @@
 
   function input(){
   var input = document.getElementById("input").value;
-  if( input == 12345 )
+  if( input == 12345 ){
   	temp = parseInt(1000);
-  else if
+  }
+  else if{
     temp = parseInt(0);
   }
 
