--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -17,17 +17,17 @@
   var temp;
 
   function input(){
-  var input = document.getElementById("input").value;
-    if( input == 12345 ){
-    	temp = parseInt(1000);
-    }
-    else if{
-      temp = parseInt(0);
-    }
+    var input = document.getElementById("input").value;
+      if( input == "12345" ){
+    	  temp = parseInt(1000);
+      }
+      else if{
+        temp = parseInt(0);
+      }
   }
 
   function output(){
-  document.getElementById("output").value = 5000-temp;
+    document.getElementById("output").value = 5000-temp;
   }
   </script>
 
