--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -5,7 +5,7 @@
 
   <h1> <font color = "blue"> do u wanna pay for that? </font></h1>
   <h2> <font size = "3"> 현재 가격은 5000원입니다.<br> 쿠폰이 있으시다면 입력해주세요.</font></h2>
-  <input type="text" id="input">
+  <input type="text" value = "6자리 입력" id="input">
   <button onclick="input()">입력받기</button><br><br>
   
   <textarea id="output"></textarea>
@@ -18,7 +18,7 @@
 
   function input(){
     var input = document.getElementById("input").value;
-      if( input == "12345" ){
+      if( input == abcd23 ){
     	  temp = parseInt(1000);
       }
       else if{
