--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -18,22 +18,23 @@
 
   function input(){
     var input = document.getElementById("input").value;
-      if( input == abcd23 ){
+     
     	  temp = parseInt(1000);
-      }
-      else if{
-        temp = parseInt(0);
-      }
   }
 
   function output(){
     document.getElementById("output").value = 5000-temp;
   }
+    
+  function purchase(){
+   	alert(' 구매 되었습니다. ');
+  }  
   </script>
 
 </head>
 <body>
 
 <input type = "button" value="close" onclick="self.close();"/>
+  <input type = "button" value"구매" onclick = "purchase()"/>
 </body>
 </html>
