--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -35,6 +35,6 @@
 <body>
 
 <input type = "button" value="close" onclick="self.close();"/>
-  <input type = "button" value"구매" onclick = "purchase()"/>
+<button onclick="purchase()">구매</button><br>
 </body>
 </html>
