--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -18,8 +18,9 @@
 
   function input(){
     var input = document.getElementById("input").value;
-     
+     if(input == asdf){
     	  temp = parseInt(1000);
+     }
   }
 
   function output(){
