--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -8,7 +8,7 @@
   <input type="text" value = "6자리 입력" id="input">
   <button onclick="input()">입력받기</button><br><br>
   
-  <textarea id="output"></textarea>
+  <textarea id="output" 원입니다. 구매하시려면 구매 버튼을 클릭하세요.></textarea>
   <button onclick="output()">출력하기</button><br><br>
 
 
@@ -22,7 +22,7 @@
     	  temp = parseInt(1000);
      }
     else{
-      temp = parseInt(0);
+       temp = parseInt(0);
   }
 
   function output(){
