--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -8,7 +8,8 @@
   <input type="text" value = "6자리 입력" id="input">
   <button onclick="input()">입력받기</button><br><br>
   
-  <textarea id="output" 원입니다. 구매하시려면 구매 버튼을 클릭하세요.></textarea>
+  <textarea id="output"></textarea><br>
+  <font size = "3">원이 결제될 예정입니다.<br> 구매를 원하신다면 구매 버튼을 클릭해주세요.</font>
   <button onclick="output()">출력하기</button><br><br>
 
 
