--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -9,9 +9,8 @@
   <button onclick="input()">입력받기</button><br><br>
   
   <textarea id="output"></textarea><br>
-  <font size = "3">원이 결제될 예정입니다.<br> 구매를 원하신다면 구매 버튼을 클릭해주세요.</font>
   <button onclick="output()">출력하기</button><br><br>
-
+  <h3> <font size = "3">원이 결제될 예정입니다.<br> 구매를 원하신다면 구매 버튼을 클릭해주세요.<br></font></h3>
 
   <!-- 아래부터 자바스크립트 -->
   <script type="text/javascript">
