--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -10,7 +10,7 @@
   
   <textarea id="output"></textarea><br>
   <button onclick="output()">출력하기</button><br><br>
-  <h3> <font size = "3">원이 결제될 예정입니다.<br> 구매를 원하신다면 구매 버튼을 클릭해주세요.<br></font></h3>
+  <font size = "3">원이 결제될 예정입니다.<br> 구매를 원하신다면 구매 버튼을 클릭해주세요.<br></font>
 
   <!-- 아래부터 자바스크립트 -->
   <script type="text/javascript">
@@ -21,7 +21,8 @@
      if(input == asdf){
     	  temp = parseInt(1000);
      }
-    else{
+    else if(input != asdf){
+       alert(' 존재하지 않은 쿠폰입니다.');
        temp = parseInt(0);
   }
 
