--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -9,7 +9,7 @@
   <button onclick="input()">입력받기</button><br><br>
   
   <textarea id="output"></textarea>
-  <button onclick="output()">출력하기</button>
+  <button onclick="output()">출력하기</button><br><br>
  
 
   <!-- 아래부터 자바스크립트 -->
