--- a/aaa/popup1.html
+++ b/aaa/popup1.html
@@ -6,10 +6,11 @@
   <h1> <font color = "blue"> do u wanna pay for that? </font></h1>
   <h2> <font size = "3"> 현재 가격은 5000원입니다.<br> 쿠폰이 있으시다면 입력해주세요.</font></h2>
   <input type="text" value = "6자리 입력" id="input">
-  <button onclick="input()">입력받기</button><br><br>
+  <button onclick="input()">쿠폰입력</button><br><br>
   
   <textarea id="output"></textarea>
-  <button onclick="output()">출력하기</button><br><br>
+  <button onclick="output()">결제금액출력</button><br><br>
+  <font size = "3">원이 결제될 예정입니다.<br> 구매를 원하신다면 구매 버튼을 클릭해주세요.<br></fon
  
 
   <!-- 아래부터 자바스크립트 -->
