--- a/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
+++ b/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
@@ -100,18 +100,19 @@
 
         <div class="row">
 
-          <div class="col-lg-4 col-md-6 mb-4">
+         <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
               <a href="#"><img class="card-img-top" src="https://t1.daumcdn.net/cfile/tistory/2536954357884B6335" width = "300" height = "150" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <span onclick ="showPopup();"><a href="#">Adidas </a></span>
+                  Big Mac Burger
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <h5><span onclick ="showPopup();"><a href="#">$24.99 </a></span>
+                  </h5>
+                <p class="card-text">Best Hamburger that you have eaten ever!! Give it a try! </p>
               </div>
               <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small><br>
               </div>
             </div>
           </div>
