--- a/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
+++ b/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
@@ -33,7 +33,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Welcome to IPS Store</a>
+      <a class="navbar-brand" href="#">Welcome to IPS Store (Chungbuk branch) </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -65,7 +65,7 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">IPS Store</h1>
+        <h1 class="my-4">IPS Shoes Store</h1>
       </div>
       <!-- /.col-lg-3 -->
 
@@ -102,14 +102,14 @@
 
          <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="https://t1.daumcdn.net/cfile/tistory/2536954357884B6335" width = "300" height = "150" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://gdimg.gmarket.co.kr/889584234/still/280?ver=1522655254" width = "300" height = "150" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  Big Mac Burger
+                  Adidas: Super Star
                 </h4>
                 <h5><span onclick ="showPopup();"><a href="#">$24.99 </a></span>
                   </h5>
-                <p class="card-text">Best Hamburger that you have eaten ever!! Give it a try! </p>
+                <p class="card-text">One of the best series of Adidas. You can be a superstar! </p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small><br>
@@ -119,7 +119,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://image.auction.co.kr/itemimage/17/d4/b9/17d4b9ffd6.jpg" width = "300" height = "150" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Nike</a>
