--- a/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
+++ b/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
@@ -102,12 +102,12 @@
 
          <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://gdimg.gmarket.co.kr/889584234/still/280?ver=1522655254" width = "300" height = "150" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://gdimg.gmarket.co.kr/889584234/still/280?ver=1522655254" width = "300" height = "200" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  Adidas: Super Star
+                  Adidas:  Super Star
                 </h4>
-                <h5><span onclick ="showPopup();"><a href="#">$24.99 </a></span>
+                <h5><span onclick ="showPopup();"><a href="#">￦68,000 </a></span>
                   </h5>
                 <p class="card-text">One of the best series of Adidas. You can be a superstar! </p>
               </div>
@@ -119,13 +119,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://image.auction.co.kr/itemimage/17/d4/b9/17d4b9ffd6.jpg" width = "300" height = "150" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://image.auction.co.kr/itemimage/17/d4/b9/17d4b9ffd6.jpg" width = "300" height = "200" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Nike</a>
+                  Nike:  Air Max
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                <h5><span onclick ="showPopup();"><a href="#">￦88,000 </a></span>
+                <p class="card-text">One of the best shoes of Nike. Go to the top of the Air!!</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
