--- a/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
+++ b/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
@@ -125,10 +125,11 @@
                   Nike:  Air Max
                 </h4>
                 <h5><span onclick ="showPopup();"><a href="#">￦88,000 </a></span>
+                </h5>
                 <p class="card-text">One of the best shoes of Nike. Go to the top of the Air!!</p>
               </div>
               <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9733;</small>
               </div>
             </div>
           </div>
@@ -138,10 +139,10 @@
               <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Puma</a>
+                  Puma
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <h5><span onclick ="showPopup();"><a href="#">￦56,000 </a></span></h5>
+                <p class="card-text">Puma's best shoes! Be the puma!! Show your bravery!!!</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -154,10 +155,10 @@
               <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Lacoste</a>
+                  Lacoste
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <h5><span onclick ="showPopup();"><a href="#">￦135,000 </a></span></h5>
+                <p class="card-text">Lacoste's Best Shoes you've ever seen. Be the King of the Jungle. Be the alligator!</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -170,10 +171,10 @@
               <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">New Balance</a>
+                  New Balance
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                <h5><span onclick ="showPopup();"><a href="#">￦60,000 </a></span></h5>
+                <p class="card-text">New Arrival!! Make your body balanced!</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -188,8 +189,8 @@
                 <h4 class="card-title">
                   <a href="#">FILA</a>
                 </h4>
-                <h5>$24.99</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+               <h5><span onclick ="showPopup();"><a href="#">￦45,000 </a></span></h5>
+                <p class="card-text">FILA is one of the fashionalbe brand in korea. You can be the fashionable star!</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
