--- a/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
+++ b/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
@@ -136,7 +136,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="https://imagessl.hyundaihmall.com/static/3/3/71/72/2072713378_0_480.jpg" width = "300" height = "200" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   Puma
@@ -152,7 +152,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" width = "300" height = "200" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   Lacoste
@@ -168,7 +168,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400"  width = "300" height = "200" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   New Balance
@@ -184,7 +184,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" width = "300" height = "200" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">FILA</a>
