--- a/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
+++ b/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
@@ -139,7 +139,7 @@
               <a href="#"><img class="card-img-top" src="https://imagessl.hyundaihmall.com/static/3/3/71/72/2072713378_0_480.jpg" width = "300" height = "200" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  Puma
+                  Puma:  Smash v2
                 </h4>
                 <h5><span onclick ="showPopup();"><a href="#">￦56,000 </a></span></h5>
                 <p class="card-text">Puma's best shoes! Be the puma!! Show your bravery!!!</p>
@@ -152,10 +152,10 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" width = "300" height = "200" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://image.auction.co.kr/itemimage/19/2f/1e/192f1ecae6.jpg" width = "300" height = "200" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  Lacoste
+                  Lacoste: Carnaby Evo
                 </h4>
                 <h5><span onclick ="showPopup();"><a href="#">￦135,000 </a></span></h5>
                 <p class="card-text">Lacoste's Best Shoes you've ever seen. Be the King of the Jungle. Be the alligator!</p>
@@ -168,26 +168,26 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400"  width = "300" height = "200" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://m.threestep.co.kr/web/product/big/201805/2001_shop1_600542.jpg"  width = "300" height = "200" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  New Balance
+                  New Balance: 990 Gray version
                 </h4>
                 <h5><span onclick ="showPopup();"><a href="#">￦60,000 </a></span></h5>
                 <p class="card-text">New Arrival!! Make your body balanced!</p>
               </div>
               <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9733;</small>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" width = "300" height = "200" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://image2.lotteimall.com/goods/19/89/51/1409518919_1.jpg" width = "300" height = "200" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">FILA</a>
+                  FILA: 
                 </h4>
                <h5><span onclick ="showPopup();"><a href="#">￦45,000 </a></span></h5>
                 <p class="card-text">FILA is one of the fashionalbe brand in korea. You can be the fashionable star!</p>
