--- a/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/aaa/popup1.html
+++ b/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/aaa/popup1.html
@@ -3,7 +3,7 @@
   <meta charset ="UTF-8">
   <title>Document</title>
 
-  <h1> <font color = "blue"> do u wanna pay for that? </font></h1>
+  <h1> <font color = "blue"> 결제하시겠습니까? </font></h1>
   <h2> <font size = "3"> 현재 가격은 5000원입니다.<br> 쿠폰이 있으시다면 입력해주세요.</font></h2>
   <input type="text" value = "6자리 입력" id="input">
   <button onclick="input()">쿠폰입력</button><br><br>
@@ -34,7 +34,7 @@
   }
     
   function purchase(){
-   	alert(' 구매 되었습니다. ');
+   	alert(' 구매가 성공적으로 습니다. ');
   }  
   </script>
 
