--- a/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
+++ b/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Welcome to IPS Store (Chungbuk branch) </a>
+      <a class="navbar-brand" href="#">IPS Store (Chungbuk branch) </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
