--- a/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
+++ b/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
@@ -64,7 +64,7 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">IPS Shoes Store</h1>
+        <br><h1 class="my-4">IPS Shoes Store</h1>
       </div>
       <!-- /.col-lg-3 -->
 
