--- a/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
+++ b/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/index.html
@@ -64,7 +64,7 @@
 
       <div class="col-lg-3">
 
-        <br><h1 class="my-4">IPS Shoes Store</h1>
+        <h1 class="my-4">IPS Shoes Store</h1>
       </div>
       <!-- /.col-lg-3 -->
 
@@ -212,7 +212,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; IPS Corporation Website 2019<br> By Kim. M. H</p>
     </div>
     <!-- /.container -->
   </footer>
