--- a/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/aaa/popup_nike.html
+++ b/startbootstrap-shop-homepage-gh-pages/startbootstrap-shop-homepage-gh-pages/aaa/popup_nike.html
@@ -19,7 +19,7 @@
 
   function input(){
     var input = document.getElementById("input").value;
-     if(input == 123456){
+     if(input == "FRESH15"){
     	 temp = parseInt(2000);
        alert(' 쿠폰이 적용되었습니다.');
      }
